<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_lbluetooth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/tv_lbluetooth_selectgames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin_small"
        android:text="@string/selectgames" />

    <ListView
        android:id="@+id/lv_lbluetooth_games"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingBottom="@dimen/activity_vertical_margin">

    </ListView>


    <Button
        android:id="@+id/b_lbluetooth_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/tv_lbluetooth_selecteddevice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/notConnected" />


    <Button
        android:id="@+id/b_lbluetooth_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />


</LinearLayout>