<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin_small"
    android:paddingTop="@dimen/activity_vertical_margin_small"
    android:paddingRight="@dimen/activity_horizontal_margin_small"
    android:paddingBottom="@dimen/activity_vertical_margin_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_lmenue_dice"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/dice"
            android:gravity="center"
            android:background="@drawable/selected"/>
        <TextView
            android:id="@+id/tv_lmenue_coin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/coin"
            android:gravity="center"
            android:background="@drawable/rechteck"/>
        <TextView
            android:id="@+id/tv_lmenue_web"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:gravity="center"
            android:background="@drawable/rechteck"/>



    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_lmenue_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">


    </FrameLayout>

</LinearLayout>