<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_small"
    android:paddingLeft="@dimen/activity_horizontal_margin_small"
    android:paddingRight="@dimen/activity_horizontal_margin_small"
    android:paddingTop="@dimen/activity_vertical_margin_small">


    <TextView
        android:id="@+id/tv_lstatisticinfo_gameinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gameinfo"
        android:textSize="35sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lstatisticinfo_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:maxLines="6"
                    android:text="@string/gamedetail" />

                <TextView
                    android:id="@+id/tv_lstatisticinfo_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:maxLines="6"
                    android:paddingLeft="@dimen/activity_horizontal_margin" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_lstatisticinfo_player"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/players"
                android:textSize="25sp"/>


            <FrameLayout
                android:id="@+id/tv_lstatisticinfo_team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lstatisticinfo_team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lstatisticinfo_team3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lstatisticinfo_team4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/tv_lstatisticinfo_team5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_lstatisticinfo_player9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin">

            </FrameLayout>

            <TextView
                android:id="@+id/tv_lstatisticinfo_result"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="25sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lstatisticinfo_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tv_lstatisticinfo_life"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/life" />

                <TextView
                    android:id="@+id/tv_lstatisticinfo_poison"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/poison" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lstatisticinfo_names"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:lineSpacingExtra="5dp"
                    android:maxLines="@null"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tv_lstatisticinfo_lifes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:maxLines="@null"
                    android:text="@string/life" />

                <TextView
                    android:id="@+id/tv_lstatisticinfo_poisons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:maxLines="@null"
                    android:text="@string/poison" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>