<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/b_lsettings_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/start" />

    <ScrollView
        android:id="@+id/sv_lsettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/b_lsettings_start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lsettings_lifepoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin_small"
                    android:text="@string/lifepoints" />

                <TextView
                    android:id="@+id/tv_lsettings_life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="20" />

                <SeekBar
                    android:id="@+id/sb_lsettings_life"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="8"
                    android:paddingBottom="@dimen/activity_vertical_margin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lsettings_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin_small"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/tv_lsettings_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="- -:- -" />

                <SeekBar
                    android:id="@+id/sb_lsettings_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="8"
                    android:paddingBottom="@dimen/activity_vertical_margin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lsettings_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin_small"
                    android:text="@string/numberOfPlayers" />


                <TextView
                    android:id="@+id/tv_lsettings_numberofplayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2" />

                <SeekBar
                    android:id="@+id/sb_lsettings_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="7"
                    android:paddingBottom="@dimen/activity_vertical_margin" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lsettings_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin_small"
                    android:text="@string/mode" />

                <RadioGroup
                    android:id="@+id/rg_lsettings_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_lgame_playername"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/playername" />

                <TextView
                    android:id="@+id/tv_lgame_deckcolor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/deckcolor" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/fl_lsettings_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/tv_lsettings_vs8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_lsettings_player9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </FrameLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_lsettings_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>